src/component/dialog/snapshots/envision__component__dialog__tests__view_message.snap
---
source: src/component/dialog/tests.rs
expression: terminal.backend().to_string()
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                ┌ Title ───────────────────────────────────────┐                
                │This is the message content.                  │                
                │                    ┌────┐                    │                
                │                    │ OK │                    │                
                │                    └────┘                    │                
                └──────────────────────────────────────────────┘
