src/component/dialog/snapshots/envision__component__dialog__tests__view_multiline_message.snap
---
source: src/component/dialog/tests.rs
expression: terminal.backend().to_string()
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                ┌ Title ───────────────────────────────────────┐                
                │Line 1                                        │                
                │Line 2                                        │                
                │Line 3                                        │                
                │                    ┌────┐                    │                
                │                    │ OK │                    │                
                │                    └────┘                    │                
                └──────────────────────────────────────────────┘
