src/component/dialog/snapshots/envision__component__dialog__tests__view_primary_button.snap
---
source: src/component/dialog/tests.rs
expression: terminal.backend().to_string()
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                ┌ Title ───────────────────────────────────────┐                
                │Message                                       │                
                │              ┌────────┐  ┌────┐              │                
                │              │ Cancel │  │ OK │              │                
                │              └────────┘  └────┘              │                
                └──────────────────────────────────────────────┘
