src/component/dialog/snapshots/envision__component__dialog__tests__view_renders.snap
---
source: src/component/dialog/tests.rs
expression: terminal.backend().to_string()
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                ┌ Test Title ──────────────────────────────────┐                
                │Test message content.                         │                
                │                    ┌────┐                    │                
                │                    │ OK │                    │                
                │                    └────┘                    │                
                └──────────────────────────────────────────────┘
