src/component/dialog/snapshots/envision__component__dialog__tests__view_title.snap
---
source: src/component/dialog/tests.rs
expression: terminal.backend().to_string()
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                ┌ My Dialog Title ─────────────────────────────┐                
                │Message                                       │                
                │                    ┌────┐                    │                
                │                    │ OK │                    │                
                │                    └────┘                    │                
                └──────────────────────────────────────────────┘
